tests/test_assets/semantic/invalid/void_values/index_expression.expected
semantic error at line 6: expression does not produce a value
1 semantic error generated.
